# mayadb-server

./: .gitignore  Cargo.toml
src/: dados_pessoas.rs  main.rs
src/collection/: load.rs  mod.rs  operators.rs  types.rs
src/core/: collection.rs  exceptions.rs  mod.rs  paths.rs  types.rs  validation.rs
src/core/read/: find.rs  mod.rs
src/core/storage/: create_dirs.rs  load_from_disk.rs  mod.rs  mount_path.rs  save_on_disk.rs
src/core/write/: insert.rs  insert_options.rs  mod.rs
