[package]
name = "maya-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = { version = "1.3.1", features = ["derive"] }
chrono = "0.4.35"
flatbuffers = "23.5.26"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"


[profile.release]
debug = true
